--- a/style.css
+++ b/style.css
@@ -2,15 +2,16 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #f0e5e5;
+    background-image: url('background.jpg'); 
 }
 
 h1 {
-    color: #333;
+    color: #c84c4c;
     text-align: center;
 }
 
 p {
-    color: #666;
+    color: #3387cc;
     text-align: center;
 }
